<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_shopping_basket"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_suppliers"
        android:icon="@drawable/ic_store"
        android:title="@string/title_suppliers" />

</menu>