...
    android:layout_height="48dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/order_from_supplier"
        android:text="@string/order"
        app:icon="@drawable/ic_add_shopping_cart"
...
